--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -577,15 +577,6 @@
       <DependentUpon>StatementSimpleStatementTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\StatementVectorLoopTest.cs" />
-    <Compile Include="Statements\TestStatemenRecordValue.TestCodeItUp.g.cs">
-      <DependentUpon>StatementRecordValueTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\TestStatemenRecordValue.TestRenameVariable.g.cs">
-      <DependentUpon>StatementRecordValueTest.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Statements\TestStatemenRecordValue.TestTryCombineStatement.g.cs">
-      <DependentUpon>StatementRecordValueTest.cs</DependentUpon>
-    </Compile>
     <Compile Include="Statements\TestStatementAnyAllDetector.TestCodeItUp.g.cs">
       <DependentUpon>StatementAnyAllDetectorTest.cs</DependentUpon>
     </Compile>
@@ -597,6 +588,9 @@
     </Compile>
     <Compile Include="Statements\TestStatementCheckLoopPairwise.TestStatementCheckLoopPairwiseConstructor.g.cs">
       <DependentUpon>StatementCheckLoopPairwiseTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Statements\TestStatementRecordValue.TestCodeItUp.g.cs">
+      <DependentUpon>StatementRecordValueTest.cs</DependentUpon>
     </Compile>
     <Compile Include="Statements\TestStatementRecordValue.TestRenameVariable.g.cs">
       <DependentUpon>StatementRecordValueTest.cs</DependentUpon>
