Create a Tuple.Create => new Tuple<>() transformer. And, for the first time, figure out how to write a test for those stand-alone transformers.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -316,6 +316,7 @@
     <Compile Include="QueryVisitors\FormattingQueryVisitorTest.TestQueryDoesntCrash.g.cs">
       <DependentUpon>FormattingQueryVisitorTest.cs</DependentUpon>
     </Compile>
+    <Compile Include="QueryVisitors\CreateTupleExpressionTransformerTest.cs" />
     <Compile Include="QueryVisitorTest.cs" />
     <Compile Include="QVResultOperatorsTest.Constructor.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
