--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -139,6 +139,7 @@
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\EnumerableRangeExpression.cs" />
     <Compile Include="QueryVisitors\EnumerableRangeExpressionTransformer.cs" />
+    <Compile Include="QueryVisitors\ExpressionVariableInvokeExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
     <Compile Include="ResultOperators\ROGroup.cs" />
