Lots of refactoring to get to the point we can actually load and compile things on the remote PROOF server... and of course it doesn't work yet, but still, this is progress.

--- a/LINQToTTree/Packages/repositories.config
+++ b/LINQToTTree/Packages/repositories.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\CLeanupPROOFServer\packages.config" />
+  <repository path="..\CmdTFileParser\packages.config" />
   <repository path="..\LINQToTreeHelpers.Tests\packages.config" />
   <repository path="..\LINQToTreeHelpers\packages.config" />
+  <repository path="..\LinqToTTreeInterfacesLib\packages.config" />
   <repository path="..\LINQToTTreeLib.Tests\packages.config" />
   <repository path="..\LINQToTTreeLib\packages.config" />
   <repository path="..\SetupPROOFServer\packages.config" />
+  <repository path="..\TestPROOFQueries\packages.config" />
+  <repository path="..\TTreeParser.Tests\packages.config" />
+  <repository path="..\TTreeParser\packages.config" />
 </repositories>
