--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -670,6 +670,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ExecutionCommon\junk_macro_parsettree_CollectionTree.C">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ExecutionCommon\ntuple_CollectionTree.h">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="ExecutionCommon\queryTestSimpleQuery.cxx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
