--- a/LINQToTTree/TestPROOFQueries/TestPROOFQueries.csproj
+++ b/LINQToTTree/TestPROOFQueries/TestPROOFQueries.csproj
@@ -85,7 +85,7 @@
     <Content Include="ntuple_CollectionTree.h">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="queryTestSimpleQuery.cxx">
+    <Content Include="query0.cxx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
