--- a/LINQToTTree/Packages/repositories.config
+++ b/LINQToTTree/Packages/repositories.config
@@ -7,6 +7,7 @@
   <repository path="..\LinqToTTreeInterfacesLib\packages.config" />
   <repository path="..\LINQToTTreeLib.Tests\packages.config" />
   <repository path="..\LINQToTTreeLib\packages.config" />
+  <repository path="..\PSPROOFUtils\packages.config" />
   <repository path="..\SetupPROOFServer\packages.config" />
   <repository path="..\TestPROOFQueries\packages.config" />
   <repository path="..\TTreeParser.Tests\packages.config" />
