Getting close to a reader, plus some refactoring.

--- a/LINQToTTree/PSPROOFUtils/PSPROOFUtils.csproj
+++ b/LINQToTTree/PSPROOFUtils/PSPROOFUtils.csproj
@@ -122,6 +122,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DSCache.cs" />
+    <Compile Include="DSContentReader.cs" />
     <Compile Include="ProofDataSetItem.cs" />
     <Compile Include="PROOFDatasetProvider.cs" />
     <Compile Include="ProofDrive.cs" />
