Correct push the namespace all the way through from the command line to the project file, and make sure it works when we run with multiple namespaces. Cool! :-)

--- a/LINQToTTree/MSBuildTasks/LINQTargets.targets
+++ b/LINQToTTree/MSBuildTasks/LINQTargets.targets
@@ -9,7 +9,7 @@ Targets to build the data model C# files from ntuple TTree spec files
   </PropertyGroup>
   <UsingTask TaskName="BuildTTreeDataModel" AssemblyFile="MSBuildTasks.dll" />
   <Target Name="GenerateTTreeDM" Inputs="@(ROOTFileDataModel);@(TTreeGroupSpec)" Outputs="@(ROOTFileDataModel->'$(IntermediateOutputPath)%(FileName).dm.cs')">
-    <BuildTTreeDataModel InputFiles="@(ROOTFileDataModel)" Namespace="%(ROOTFileDataModel.Namespace)" OutputFiles="@(ROOTFileDataModel->'$(IntermediateOutputPath)%(FileName).dm.cs')">
+    <BuildTTreeDataModel InputFiles="@(ROOTFileDataModel)" Namespace="%(ROOTFileDataModel.Namespace)" OutputFiles="@(ROOTFileDataModel->'$(IntermediateOutputPath)%(FileName)%(Namespace).dm.cs')">
       <Output ItemName="Compile" TaskParameter="OutputFiles" />
     </BuildTTreeDataModel>
     <ItemGroup>
