First test to deal with a pair<> that appears in a c-style array.

--- a/LINQToTTree/TTreeParser.Tests/TTreeParser.Tests.csproj
+++ b/LINQToTTree/TTreeParser.Tests/TTreeParser.Tests.csproj
@@ -134,6 +134,9 @@
     <None Include="btagobjs.root">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="pairedarray.root">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ComplexNtupleTestInput.root">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
