Test that fails when renaming a multi-level object reference.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -233,6 +233,7 @@
       <DependentUpon>t_ExpressionResolver.cs</DependentUpon>
     </Compile>
     <Compile Include="Expressions\t_ExpressionsOnImpliedObjects.cs" />
+    <Compile Include="Expressions\t_MultiLevelArrays.cs" />
     <Compile Include="Factories\ArrayInfoVectorFactory.cs" />
     <Compile Include="Factories\CodeOptimizerTestFactory.cs" />
     <Compile Include="Factories\CombinedGeneratedCodeFactory.cs" />
