Update the build numbers to 0.5

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -327,7 +327,7 @@
     <Compile Include="QueryResultCacheTest.Lookup.g.cs">
       <DependentUpon>QueryResultCacheTest.cs</DependentUpon>
     </Compile>
-    <Compile Include="QueryVisitorOnImpliedObjectsTest.cs" />
+    <Compile Include="QueryVisitors\QueryVisitorOnImpliedObjectsTest.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitorTest.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitorTest.Format.g.cs">
       <DependentUpon>FormattingQueryVisitorTest.cs</DependentUpon>
@@ -336,7 +336,7 @@
       <DependentUpon>FormattingQueryVisitorTest.cs</DependentUpon>
     </Compile>
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformerTest.cs" />
-    <Compile Include="QueryVisitorTest.cs" />
+    <Compile Include="QueryVisitors\QueryVisitorTest.cs" />
     <Compile Include="QVResultOperatorsTest.Constructor.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
     </Compile>
