--- a/LINQToTTree/CmdTFileParser/packages.config
+++ b/LINQToTTree/CmdTFileParser/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.2" />
-  <package id="ROOTNET-Tree-v5.30.01.win32.vc10" version="2.2" />
+  <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.5-dev0089" targetFramework="net40-Client" />
+  <package id="ROOTNET-Dynamic-v5.30.01.win32.vc10" version="2.5-dev0089" targetFramework="net40-Client" />
+  <package id="ROOTNET-Tree-v5.30.01.win32.vc10" version="2.5-dev0089" targetFramework="net40-Client" />
 </packages>
