--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -59,47 +59,57 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=2.2.4255.4082, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper, Version=2.5.4575.24420, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper, Version=2.2.4255.4170, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libGrafWrapper.dll</HintPath>
+    <Reference Include="libGrafWrapper, Version=2.5.4575.24536, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libGrafWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libHistWrapper, Version=2.2.4255.4144, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libHistWrapper.dll</HintPath>
+    <Reference Include="libHistWrapper, Version=2.5.4575.24493, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofDrawWrapper">
-      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofDrawWrapper.dll</HintPath>
+    <Reference Include="libMathCoreWrapper, Version=2.5.4575.24431, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofPlayerWrapper">
-      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofPlayerWrapper.dll</HintPath>
+    <Reference Include="libNetWrapper, Version=2.5.4575.24486, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libNetWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=2.2.4255.4092, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
+    <Reference Include="libPhysicsWrapper, Version=2.5.4575.24435, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libPhysicsWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libNetWrapper, Version=2.2.4255.4132, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libNetWrapper.dll</HintPath>
+    <Reference Include="libProofDrawWrapper, Version=2.5.4575.24573, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libProofDrawWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=2.2.4255.4095, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libPhysicsWrapper.dll</HintPath>
+    <Reference Include="libProofPlayerWrapper, Version=2.5.4575.24645, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libProofPlayerWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofWrapper">
-      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofWrapper.dll</HintPath>
+    <Reference Include="libProofWrapper, Version=2.5.4575.24618, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libProofWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofxWrapper">
-      <HintPath>..\packages\ROOTNET-PROOF-v5.30.01.win32.vc10.2.2\lib\net40\libProofxWrapper.dll</HintPath>
+    <Reference Include="libRIOWrapper, Version=2.5.4575.24462, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libRIOWrapper, Version=2.2.4255.4114, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
+    <Reference Include="libThreadWrapper, Version=2.5.4575.24439, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libThreadWrapper, Version=2.2.4255.4098, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libThreadWrapper.dll</HintPath>
+    <Reference Include="libTreePlayerWrapper, Version=2.5.4575.24575, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libTreePlayerWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libTreePlayerWrapper, Version=2.2.4255.4192, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreePlayerWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libTreeWrapper, Version=2.2.4255.4181, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreeWrapper.dll</HintPath>
+    <Reference Include="libTreeWrapper, Version=2.5.4575.24555, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.ExtendedReflection, Version=0.94.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -129,8 +139,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4255.3988, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4575.24325, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
