--- a/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
+++ b/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
@@ -78,41 +78,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=2.2.4255.4082, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper, Version=2.5.4575.24420, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\Packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper, Version=2.2.4255.4170, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libGrafWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libHistWrapper, Version=2.2.4255.4144, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libHistWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libMathCoreWrapper, Version=2.2.4255.4092, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libMathCoreWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libNetWrapper, Version=2.2.4255.4132, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libNetWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libPhysicsWrapper, Version=2.2.4255.4095, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libPhysicsWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libRIOWrapper, Version=2.2.4255.4114, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libRIOWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libThreadWrapper, Version=2.2.4255.4098, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\libThreadWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libTreePlayerWrapper, Version=2.2.4255.4192, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreePlayerWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libTreeWrapper, Version=2.2.4255.4181, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.2\lib\net40\libTreeWrapper.dll</HintPath>
+    <Reference Include="libTreeWrapper, Version=2.5.4575.24555, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\Packages\ROOTNET-Tree-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4255.3988, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\ROOTNET-Core-v5.30.01.win32.vc10.2.2\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary, Version=2.2.4575.24325, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\Packages\ROOTNET-Dynamic-v5.30.01.win32.vc10.2.5-dev0089\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
