--- a/LINQToTTree/LINQToTreeHelpers/packages.config
+++ b/LINQToTTree/LINQToTreeHelpers/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ROOTNET-Core-v5.30.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
-  <package id="ROOTNET-Dynamic-v5.30.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
-  <package id="ROOTNET-Graphing-v5.30.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
+  <package id="ROOTNET-Core-v5.34.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
+  <package id="ROOTNET-Dynamic-v5.34.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
+  <package id="ROOTNET-Graphing-v5.34.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
+  <package id="ROOTNET-Tree-v5.34.01.win32.vc10" version="2.5" targetFramework="net40-Client" />
   <package id="Sprache" version="1.9.1.31" />
 </packages>
