--- a/LINQToTTree/LINQToTreeHelpers/packages.config
+++ b/LINQToTTree/LINQToTreeHelpers/packages.config
@@ -5,5 +5,5 @@
   <package id="ROOTNET-Dynamic-v5.32.04.win32.vc10" version="2.6" targetFramework="net40-Client" />
   <package id="ROOTNET-Graphing-v5.32.04.win32.vc10" version="2.6" targetFramework="net40-Client" />
   <package id="ROOTNET-Tree-v5.32.04.win32.vc10" version="2.6" targetFramework="net40-Client" />
-  <package id="Sprache" version="1.9.1.31" />
+  <package id="Sprache" version="1.10.0.11" targetFramework="net40-Client" />
 </packages>
